--- a/aboutus.html
+++ b/aboutus.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="container shadow bg-light">
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <!-- naranja: d55300ff
         azul: 0000cbfe
           verde: 00c803ff
@@ -54,13 +54,13 @@
           <div class="col-md-6">
             <img class="img-fluid" src="logoAJI1.svg" alt="">
           </div>
-          <div class="col-md-6 col-sm-12 d-flex align-content-center flex-wrap">
+          <div class="col-6 d-flex align-content-center justify-content-center flex-wrap">
             <h1>ACERCA DE NOSOSTROS</h1>
           </div>
         </div>  
       </div>
 
-      <nav class="d-flex justify-content-center bg-dark text-white py-2 sticky-top">
+      <nav class="d-flex justify-content-center bg-dark text-white py-2">
         <h2 id="quienes">¿QUIENES SOMOS?</h2>
       </nav>
 
@@ -68,14 +68,14 @@
         Asociación de juventudes innovados es una organización privada sin ánimo de lucro, conformado por un equipo de trabajo que busca fortalecer las diferentes instancias sociales desde iniciativas juveniles con el apoyo y acompañamiento de la comunidad en general, avanzar en la defensa, promoción y protección de los derechos humanos, ambiente, victimas, el arte, la cultura, la paz, educación y demás ejes que hacen parte del desarrollo de la integralidad de la vida, sabiendo que nuestra igualdad es que pensamos diferente y aportar así al progreso de las comunidades y los pueblos en sus dimensiones y cosmovisión del mundo.
       </div>
 
-      <nav class="d-flex justify-content-center bg-dark text-white py-2 sticky-top">
+      <nav class="d-flex justify-content-center bg-dark text-white py-2">
         <h2 id="mision">MISION</h2>
       </nav>
       <div class="container-fluid p-4 py-5">
         La asociación de juventudes innovados, dentro de sus responsabilidades sociales, juveniles, y culturales, busca incentivar el liderazgo de iniciativas desde lo juvenil constituyendo a toda la comunidad, propendiendo por el desarrollo integral en todos los ejes que son pieza fundamental del desarrollo sostenible, transformando todas las dinámicas para fortalecer la vida de las y los jóvenes y la sociedad en general, para esto es indispensable la protección de los derechos de todos las personas a quienes queremos llegar, con ánimo de  interrelacionarse en los diferentes gubernamentales, sociales, económicos, culturales y ambientales, en los que los y las jóvenes queremos demostrar nuestras capacidades.
       </div>
 
-      <nav class="d-flex justify-content-center bg-dark text-white py-2 sticky-top">
+      <nav class="d-flex justify-content-center bg-dark text-white py-2">
         <h2 id="vision">VISION</h2>
       </nav>
       <div class="container-fluid p-4 py-5">
