--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
   </head>
   <body>
     <div class="container shadow bg-light">
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <!-- naranja: d55300ff
         azul: 0000cbfe
           verde: 00c803ff
       -->
         
         <!-- Brand -->
-        <a class="navbar-brand mr-auto" href="index.html"><img src="logoAJI1.svg" alt="" width="100"></a>
+        <a class="navbar-brand mr-auto" href="index.html"><img src="logoAJI1.svg" alt="INNOVADOS" width="70"></a>
 
           <!-- Links -->
           <ul class="navbar-nav">
@@ -114,7 +114,7 @@
       </nav>
 
       <div class="row">
-        <div class="col-md-4 p-4">
+        <div class="col-md-4 p-4 m-sm-1 m-md-auto">
 
           <div class="card" style="width:100%">
             <img class="card-img-top" src="undraw_voice_interface_eckp.svg" alt="Card image">
@@ -127,7 +127,7 @@
 
         </div>
 
-        <div class="col-md-4 p-4">
+        <div class="col-md-4 p-4 m-sm-1 m-md-auto">
 
           <div class="card" style="width:100%">
             <img class="card-img-top" src="undraw_voice_interface_eckp.svg" alt="Card image">
@@ -140,7 +140,7 @@
 
         </div>
 
-        <div class="col-md-4 p-4">
+        <div class="col-md-4 p-4 m-sm-1 m-md-auto">
 
           <div class="card" style="width:100%">
             <img class="card-img-top" src="undraw_voice_interface_eckp.svg" alt="Card image">
