--- a/contact.html
+++ b/contact.html
@@ -87,8 +87,8 @@
               <p><i class="fas fa-home"></i> Direccion: CR 23 No. 8 - 43 AP 1 - El Copey, Cesar</p>
               <p><i class="fas fa-phone-square-alt"></i> Celular: 3043339237</p>
               <p><i class="fas fa-envelope-square"></i> Correo: henry_jfa@hotmail.com</p>
-              <a class="text-dark" href="#"><h3><i class="icon icon-but-f text-dark fab fa-facebook-square"></i> INNOVADOS</h3></a>
-              <a class="text-dark" href="#"><h3><i class="icon icon-but-t text-dark fab fa-twitter-square"></i> INNOVADOS</h3></a>
+              <a class="text-dark" href="#"><p><i class="icon-but-f text-dark fab fa-facebook-square"></i> INNOVADOS</p></a>
+              <a class="text-dark" href="#"><p><i class="icon-but-t text-dark fab fa-twitter-square"></i> INNOVADOS</p></a>
               
             </div>
           </div>
