--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 </div>
                 <div class="col-md-6 col-sm-12">
                   <!--<h1 class="titulo-md">Bootstrap Tutorial</h1>-->
-                  <p class="h2 titulo-sm">El Liderazgo</p>
+                  <p class="h2 titulo-sm">Liderazgo</p>
                   <p>El liderazgo es indispensable en este proceso,  porque permite de cierta forma participar plenamente en la sociedad, en este sentido para lograr una asimetría y engranaje en esta asociación, cada individuo parte de sus conocimientos para construir conciencia a nivel general</p>
                 </div>
               </div>              
