--- a/aboutus.html
+++ b/aboutus.html
@@ -20,7 +20,7 @@
 
       <div class="d-flex">
         <!-- Brand -->
-        <a class="navbar-brand flex-grow-1 p-md-3 p-2" href="index.html"><img class="logo" src="logoAJI1.svg" alt="INNOVADOS"></a>
+        <a class="navbar-brand flex-grow-1 p-md-3 p-2" href="index.html"><img class="logo" src="logoAJI2.svg" alt="INNOVADOS"></a>
         <a href="https://www.facebook.com/INNOVADOS2/" target="_blank"><i class="icon-top fab fa-facebook-square text-dark p-md-3 p-2"></i></a>
         <a href="http://" target="_blank"><i class="icon-top fab fa-twitter-square text-dark p-md-3 p-2"></i></a>
         
@@ -76,8 +76,8 @@
         <h2 id="logo">LOGO</h2>
       </nav>
 
-      <div class="d-flex justify-content-center">
-        <img class="img-fluid" src="logoAJI1.svg" width="40%" alt="">
+      <div class="d-flex justify-content-center py-4">
+        <img class="img-fluid" src="logoAJI2.svg" width="40%" alt="">
       </div>
 
 
@@ -104,8 +104,9 @@
       </div>
 
       <nav class="bg-footer">
-        <div class="d-flex justify-content-center text-white py-2">
-          <p class="h3 inline-block p-md-2 p-2">Asociación de Juventudes INNOVADOS. 2020</p>
+        <div class="d-flex flex-column text-white py-2">
+          <p class="h3 inline-block p-md-2 p-2 text-center">Asociación de Juventudes INNOVADOS. 2020</p>
+          <p class="text-center"><i class="fas fa-barcode"></i> NIT: 901385629-2</p>
         </div>
         
         <hr>
