--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 
       <div class="d-flex">
         <!-- Brand -->
-        <a class="navbar-brand flex-grow-1 p-md-3 p-2" href="index.html"><img class="logo" src="logoAJI1.svg" alt="INNOVADOS"></a>
+        <a class="navbar-brand flex-grow-1 p-md-3 p-2" href="index.html"><img class="logo" src="logoAJI2.svg" alt="INNOVADOS"></a>
         <a href="https://www.facebook.com/INNOVADOS2/" target="_blank"><i class="icon-top fab fa-facebook-square text-dark p-md-3 p-2"></i></a>
         <a href="http://" target="_blank"><i class="icon-top fab fa-twitter-square text-dark p-md-3 p-2"></i></a>
         
@@ -81,6 +81,7 @@
         <div class="row ">
           <div class="offset-md-6 col-md-6">
             <div class="d-block justify-content-center text-dark py-5 ml-5">
+              <p><i class="fas fa-barcode"></i> NIT: 901385629-2</p>
               <p><i class="fas fa-home"></i> Direccion: CR 23 No. 8 - 43 AP 1 - El Copey, Cesar</p>
               <p><i class="fas fa-phone-square-alt"></i> Celular: 3043339237</p>
               <p><i class="fas fa-envelope-square"></i> Correo: henry_jfa@hotmail.com</p>
@@ -131,8 +132,9 @@
       <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d490.92733794176405!2d-73.96564394615129!3d10.146579946684355!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sco!4v1592251224877!5m2!1ses!2sco" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 
       <nav class="bg-footer">
-        <div class="d-flex justify-content-center text-white py-2">
-          <p class="h3 inline-block p-md-2 p-2">Asociación de Juventudes INNOVADOS. 2020</p>
+        <div class="d-flex flex-column text-white py-2">
+          <p class="h3 inline-block p-md-2 p-2 text-center">Asociación de Juventudes INNOVADOS. 2020</p>
+          <p class="text-center"><i class="fas fa-barcode"></i> NIT: 901385629-2</p>
         </div>
         
         <hr>
