--- a/index.html
+++ b/index.html
@@ -134,42 +134,25 @@
       </div>
 
       <nav class="d-flex justify-content-center bg-darker text-white py-2">
-        <h2>ULTIMAS NOTICIAS</h2>
+        <h2>NOVEDADES</h2>
       </nav>
       
       <div class="row justify-content-around">
-        <div class="col-md-4 p-4">
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-4 p-4">
 
-          <div class="fb-page" data-href="https://www.facebook.com/INNOVADOS2/" data-tabs="timeline" data-width="" data-height="" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false"><blockquote cite="https://www.facebook.com/INNOVADOS2/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/INNOVADOS2/">Juventudes</a></blockquote></div>
-
-
-        </div>
-
-        <div class="col-md-4 p-4">
-
-          <div class="card" style="width:90%">
-            <p id="time" class="text-black-50 pl-3"><i class="fas fa-calendar-day"></i> 20 Junio 2020</p>
-            <img class="card-img-top" src="undraw_voice_interface_eckp.svg" alt="Card image">
-            <div class="card-body">
-              <h4 class="card-title">Noticia 1</h4>
-              <p class="card-text text-justify">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit ducimus velit minus molestiae dolores voluptatibus ratione eveniet, doloribus asperiores. A.</p>
-              <!--<a href="#" class="btn btn-primary">See Profile</a>-->              
-            </div>
-          </div>
+          <div class="fb-post" data-href="https://www.facebook.com/INNOVADOS2/posts/2962695563826988" data-show-text="true" data-width=""><blockquote cite="https://developers.facebook.com/INNOVADOS2/posts/2962695563826988" class="fb-xfbml-parse-ignore"><p>A Dios gracias, en medio de la pandemia por Covid-19 que vive el mundo, y en cognotaciones especiales nuestro Municipio...</p>Publicado por <a href="https://www.facebook.com/INNOVADOS2/">Juventudes</a> en&nbsp;<a href="https://developers.facebook.com/INNOVADOS2/posts/2962695563826988">Lunes, 8 de junio de 2020</a></blockquote></div>
 
         </div>
 
-        <div class="col-md-4 p-4">
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-4 p-4">
 
-          <div class="card" style="width:90%">
-            <p class="text-black-50 pl-3"><i class="fas fa-calendar-day"></i> 20 Junio 2020</p>
-            <div class="card-body">
-              <h4 class="card-title">Noticia 2</h4>
-              <p class="card-text text-justify">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit ducimus velit minus molestiae dolores voluptatibus ratione eveniet, doloribus asperiores. A.</p>
-              <!--<a href="#" class="btn btn-primary">See Profile</a>-->
-              
-            </div>
-          </div>
+          <div class="fb-post" data-href="https://www.facebook.com/INNOVADOS2/posts/2778774898885723" data-show-text="true" data-width=""><blockquote cite="https://developers.facebook.com/INNOVADOS2/posts/2778774898885723" class="fb-xfbml-parse-ignore"><p>A partir de las 04:00 PM de hoy 20/03/20  el MJA estará recolectando Dios mediante alimentos no perecederos para donar a...</p>Publicado por <a href="https://www.facebook.com/INNOVADOS2/">Juventudes</a> en&nbsp;<a href="https://developers.facebook.com/INNOVADOS2/posts/2778774898885723">Viernes, 20 de marzo de 2020</a></blockquote></div>
+
+        </div>
+
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-4 p-4">
+
+          <div class="fb-post" data-href="https://www.facebook.com/INNOVADOS2/posts/2707978072632073" data-show-text="true" data-width=""><blockquote cite="https://developers.facebook.com/INNOVADOS2/posts/2707978072632073" class="fb-xfbml-parse-ignore"><p>Talleres sobre principios y valores para vivir en paz MJA Int. Edu. Int. Montelibano  #JUVENTUDLAHUELLADELPRESENTE</p>Publicado por <a href="https://www.facebook.com/INNOVADOS2/">Juventudes</a> en&nbsp;<a href="https://developers.facebook.com/INNOVADOS2/posts/2707978072632073">Viernes, 14 de febrero de 2020</a></blockquote></div>      
 
         </div>
 
