--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         azul: 0000cbfe
           verde: 00c803ff
       -->
-      <div class="navbar-nav nav-item">
-        <a class="titulo-md nav-link" href="index.html">INNOVADOS</a>
-      </div>       
+      <a class="navbar-brand" href="index.html">
+        <img src="logoAJI1.svg" alt="Logo" style="width:120px;">
+      </a>      
         
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
